Update auth API user model mapping
