# server/src/main/resources/openapi/auth-api.yaml
@@ -337,17 +337,20 @@ components:
           type: string
           minLength: 3
           maxLength: 100
+          description: Unique username
           example: johndoe
         
         email:
           type: string
           format: email
+          description: User's email address
           example: john@example.org
           
         password:
           type: string
           format: password
           minLength: 8
+          description: User's password
           example: MyStrongPassword123
           
     UpdateUserRequest:
@@ -379,7 +382,6 @@ components:
           minLength: 8
           example: NewPassword456
     
-
     OrcidTokenRequest:
       type: object
       required:
@@ -435,6 +437,14 @@ components:
         user:
           $ref: '#/components/schemas/User'
 
+    UserRole:
+      type: string
+      enum:
+        - VIEWER
+        - CURATOR
+        - ADMIN
+      example: ADMIN
+
     User:
       type: object
       required:
@@ -465,12 +475,7 @@ components:
           example: "0000-0001-2345-6789"
 
         role:
-          type: string
-          enum:
-            - VIEWER
-            - CURATOR
-            - ADMIN
-          example: ADMIN
+          $ref: '#/components/schemas/UserRole'
 
         enabled:
           type: boolean
